--- a/tta/WATT/templates.yaml
+++ b/tta/WATT/templates.yaml
@@ -1,9 +1,45 @@
-templates:
-  - "a photo of a {}"
-  - "itap of a {}"
-  - "a bad photo of the {}."
-  - "a origami {}."
-  - "a photo of the large {}."
-  - "a {} in a video game."
-  - "art of the {}."
-  - "a photo of the small {}."
+state_level_normal_prompts:
+  - '{}'
+  - 'flawless {}'
+  - 'perfect {}'
+  - 'unblemished {}'
+  - '{} without flaw'
+  - '{} without defect'
+  - '{} without damage'
+
+state_level_abnormal_prompts:
+  - 'damaged {}'
+  - '{} with flaw'
+  - '{} with defect'
+  - '{} with damage'
+
+state_level_normality_specific_prompts: []
+
+state_level_abnormality_specific_prompts:
+  - '{} with {} defect'  # object, anomaly type
+  - '{} with {} flaw'
+  - '{} with {} damage'
+
+template_level_prompts:
+  - 'a cropped photo of the {}'
+  - 'a cropped photo of a {}'
+  - 'a close-up photo of a {}'
+  - 'a close-up photo of the {}'
+  - 'a bright photo of a {}'
+  - 'a bright photo of the {}'
+  - 'a dark photo of the {}'
+  - 'a dark photo of a {}'
+  - 'a jpeg corrupted photo of a {}'
+  - 'a jpeg corrupted photo of the {}'
+  - 'a blurry photo of the {}'
+  - 'a blurry photo of a {}'
+  - 'a photo of a {}'
+  - 'a photo of the {}'
+  - 'a photo of a small {}'
+  - 'a photo of the small {}'
+  - 'a photo of a large {}'
+  - 'a photo of the large {}'
+  - 'a photo of the {} for visual inspection'
+  - 'a photo of a {} for visual inspection'
+  - 'a photo of the {} for anomaly detection'
+  - 'a photo of a {} for anomaly detection'
