--- a/tta/WATT/templates.yaml
+++ b/tta/WATT/templates.yaml
@@ -12,6 +12,9 @@ state_level_abnormal_prompts:
   - '{} with flaw'
   - '{} with defect'
   - '{} with damage'
+  - '{} with corruption'
+  - '{} with corruption'
+  - '{} with wrong'
 
 state_level_normality_specific_prompts: []
 
